logs/django-tip.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_tip-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tip'...
Compiling './lib/python3.5/site-packages/tip/actions.py'...
***   File "./lib/python3.5/site-packages/tip/actions.py", line 42
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tip/management'...
Listing './lib/python3.5/site-packages/tip/management/commands'...
Compiling './lib/python3.5/site-packages/tip/management/commands/tip.py'...
***   File "./lib/python3.5/site-packages/tip/management/commands/tip.py", line 36
    print safe_colorize('include command requires a template', fg='red')
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tip/tests'...
Listing './lib/python3.5/site-packages/tip/tests/functional'...
Listing './share'...
Listing './share/python-wheels'...
